syntax = "proto3";

package auth;

option go_package = "tizzhh.auth.v1;authv1";

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
    rpc Unregister(UnregisterRequest) returns (UnregisterResponse);
}   

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    int32 age = 5;
}

message RegisterResponse {
    int64 user_id = 1;
    string email = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message UpdatePasswordRequest {
    string email = 1;
    string old_password = 2;
    string new_password = 3;
}

message UpdatePasswordResponse {
    string email = 1;
}

message UnregisterRequest {
    string email = 1;
}

message UnregisterResponse {
    string email = 1;
}